n8n/2.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
      annotations:
        enableServiceLinks: "false"
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:latest
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: hooks
          mountPath: /home/node/.n8n/hooks.js
          subPath: hooks.js
        - name: n8n-data
          mountPath: /home/node/.n8n
        - name: flux-temp
          mountPath: /flux
        - name: node-modules
          mountPath: /custom_node_modules
      volumes:
      - name: hooks
        configMap:
          name: n8n-hooks
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-pvc
      - name: flux-temp
        emptyDir: {}
      - name: node-modules
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n
spec:
  selector:
    app: n8n
  type: NodePort
  ports:
    - nodePort: 31001
      protocol: TCP
      port: 5678
      targetPort: 5678
